<resources>
    <string name="app_name">Feira Gourmet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alexandre Uehara</string>
    <string name="nav_header_subtitle">alexandre.uehara@fiap.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="myAccont">Minha Conta</string>
    <string name="myLists">Minhas Listas</string>
    <string name="myGoods">Carrinho de Compras</string>
    <string name="payments">Pagamentos</string>
    <string name="notifications">Notificações</string>
    <string name="settings">Configurações</string>
    <string name="ratings">Avalie!</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_shopcart">Carrinho</string>
    <string name="action_about_us">Sobre</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="about_text1">Nossa idéia consiste no desenvolvimento de uma plataforma de suporte (backend) e Apps clientes (Android e iOS) para criar um conceito de "feira on-line". \n \n
        O App exibe um mapa mostrando as feiras prôximas ao usuário ou alguma localidade específicas \n \n
        Selecionando a feira, o usuário pode encontrar promoções ofertadas pelos feirantes parceiros, obtendo descontos exclusivos através do App. \n \n
        Ser oferecido também um serviço de delivery, através do qual o usuário pode selecionar os produtos desejados, efetuar pagamento on-line através do próprio App e recebe-los em sua residência. \n \n
        Faremos parcerias com os feirantes e serviços de entrega expressa de forma a viabilizar o modelo de negôcios.
    </string>
    <string name="title_about_us"><b>DESENVOLVEDORES DO PROJETO</b></string>
    <string name="text2">ARTUR RAMOS RIBEIRO DO VALLE \n DANIEL MACENA IDERIBA \n KAIQUE DA COSTA COQUEIRO</string>
    <string name="main_text1">Categorias</string>
    <string name="main_subtext1">Explore nossa linha completa de produtos</string>
</resources>
