<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/myAccount"
                android:title="@string/myAccont"/>
        <item
                android:id="@+id/myLists"
                android:title="@string/myLists"/>
        <item
                android:id="@+id/myGoods"
                android:title="@string/myGoods"/>
        <item
                android:id="@+id/payments"
                android:title="@string/payments"/>

        <item
                android:id="@+id/notifications"
                android:title="@string/notifications"/>
    </group>

    <group android:checkableBehavior="single">
            <item
                    android:id="@+id/settings"
                    android:title="@string/settings"/>
            <item
                    android:id="@+id/rating"
                    android:title="@string/ratings"/>
    </group>

</menu>
